--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -13,7 +13,7 @@ body
   justify-content: center
   align-items: center
   
-.App 
+.Login 
   background: $gray
   height: 340px
   width: 520px
@@ -85,7 +85,7 @@ button:hover
 
 @media screen and (max-width: 620px) 
   
-  .App
+  .Login
     min-height: 300px
     max-height: 420px
     width: 90vw
@@ -97,3 +97,4 @@ button:hover
   button
     margin-top: 10px
     margin-bottom: -20px
+    
