--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,3 +20,11 @@
 .App-link {
   color: #09d3ac;
 }
+
+.container-div{ 
+  Display: flex;
+  Height: 100vh;
+  Width: 100vw; 
+  Align-Items: center;
+  Justify-Content: center;
+  }
