--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,7 @@ body, html, .App, #root, .outer {
 }
 
 .navbar-light {
+  font-size: 20px;
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
 }
