--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url("wallpaper.png") no-repeat center center fixed; 
+  background-image: url("background_curtains.png") no-repeat center center fixed; 
   background-size:cover;
   -moz-background-size:cover;
   -webkit-background-size:cover;
@@ -10,7 +10,7 @@
 
 html, body {
   height: 100%;
-  background: url("wallpaper.png") no-repeat center center fixed;
+  background: url("background_curtains.png") no-repeat center center fixed;
   background-size:cover;
   -moz-background-size:cover;
   -webkit-background-size:cover;
